--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  google_fonts: ^1.1.0
   flutter_rating_bar: ^3.0.1+1
+  flutter_svg: ^0.18.0 #it helps us to use SVG in our app
+  google_fonts: any
+  dio: ^4.0.0
+#this allows you to easily use any fonts from fonts.google.com in your Flutter app
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +30,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
