--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_svg: ^0.18.0 #it helps us to use SVG in our app
   google_fonts: any
   dio: ^4.0.0
+  animations: ^2.0.0
+  auto_animated: ^3.0.0
 #this allows you to easily use any fonts from fonts.google.com in your Flutter app
 
 dev_dependencies:
@@ -30,4 +32,5 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/success.png
     - assets/icons/
