--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_rating_bar: ^3.0.1+1
   flutter_svg: ^0.18.0 #it helps us to use SVG in our app
   google_fonts: any
   dio: ^4.0.0
   animated_text_kit: ^4.1.1
-#this allows you to easily use any fonts from fonts.google.com in your Flutter app
+  camera:
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
